--- a/www/ui/css/evothings-app.css
+++ b/www/ui/css/evothings-app.css
@@ -1,4 +1,10 @@
+@font-face{font-family:'ozBold'; 
+src:url('../fonts/AoOz-Bold.eot?') format('eot'),
+    url('../fonts/AoOz-Bold.woff') format('woff'),
+    url('../fonts/AoOz-Bold.ttf') format('truetype'),
+    url('../fonts/AoOz-Bold.svg') format('svg');font-weight:normal;font-style:normal}
 
+h1, h2, h3 { font-family: 'ozBold' }
 
 .form-signin
 {
@@ -84,3 +90,11 @@ body {
 .sign-in-button {
 	margin-top: 15px;
 }
+
+#mainPage .account-wall { padding: 20px;}
+
+#chat {
+    list-style: none; margin: 0; padding: 0;
+}
+#chat li { border-radius: 5px; border: 1px solid silver; border-left: 5px solid  #7FBA24; padding: 5px 10px; margin-bottom: 2px; background-color: rgba(255, 255, 255, 0.58;}
+#chat li span { font-weight: bold;} 
